[package]
name = "vollibrespot"
version = "0.2.5"
authors = ["ashthespy <https://github.com/ashthespy/>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "vollibrespot"
path = "src/main.rs"
doc = false

[dependencies]
env_logger = { version = "0.10", default-features = false, features = ["color", "humantime"] }
futures = "0.3"
getopts = "0.2"
log = "0.4"
tokio = { version = "1", features = ["rt", "macros", "signal", "time", "net"] }
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
hex = "0.4"
toml = "0.5"

[dependencies.librespot]
version = "0.4.2"
default-features = false
features = ["alsa-backend"]

[build-dependencies]
vergen = "3.0.4"
